# CallCenterEmulation

./: CMakeLists.txt  README.md
config/: conf.json  test.json
src/: main.cpp
src/CDRJournal/: CDRJournal.cpp  CDRJournal.h
src/HTTPServ/: HTTPServ.cpp  HTTPServ.h
src/callProcessing/: callProcessing.cpp  callProcessing.h
src/jsonParser/: jsonParser.cpp  jsonParser.h
src/utils/: utils.cpp  utils.h
tests/: operatorCallTest.cpp
